11/28/2011 Parameterized IActor on message types to support both String and serialized messages
11/9/2011 Simsharing, added flag ALLOW_CONNECTION for debugging, if this is set to false, then it won't send messages to the server, but will still print them to the console
11/8/2011 Added NullClient for offline testing, see #3136
11/4/2011 Report on the number of messages sent for purposes of error-checking and verifying that no messages were dropped, see #3136
11/4/2011 Overrode Some.equals, Some.hashCode and None.equals
11/3/2011 Create .phet directory if it did not exist in sim sharing cookie creation, see #3136
11/3/2011 Added a research menu item in the about menu, see #3136
11/3/2011 Added an input dialog for id, see #3136
11/2/2011 Repackaged classes under phetcommon/simsharing, see #3136
11/2/2011 Send an event when the user resizes the sim window, and on the initial window sizing, see #3136
11/2/2011 Added a parser version, see #3136
11/2/2011 If sim sharing is on, show a menu for isolating and identifying sessions, see #3145
11/2/2011 Report on student usage for menus and menu items, see #3144
11/2/2011 Added flush commands and factored out IP address, see #3136
11/2/2011 Switched to use writeUTF instead of writeObject, see #3136
11/2/2011 Use tab instead of comma as parameter delimiter, see #3136
11/1/2011 Changed from SimSharingProperty to track UI control changes, see #3136
11/1/2011 Changed PropertyCheckBox to use actionPerformed instead of ChangeListener to suppress multiple event notifications, see #3136
10/31/11 Changed events from "message" to "object" + "action", see #3136
10/30/11 Only try to load machine cookie if sim-sharing is enabled, see #3136
10/30/11 Replaced usages of SimSharingEvents.addPropertyListener with SimSharingProperty and removed SimSharingEvents.addPropertyListener, see #3136
10/30/11 Store a cookie on the user's machine to identify when the same machine is using different sims, see #3136